--- a/ffcrm.UserEmailService.csproj
+++ b/ffcrm.UserEmailService.csproj
@@ -36,6 +36,10 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Security" />
+    <Reference Include="System.Security.Cryptography.ProtectedData, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Security.Cryptography.ProtectedData.5.0.0\lib\net461\System.Security.Cryptography.ProtectedData.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -59,6 +63,30 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DbShared.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Helper\Currencies.cs" />
+    <Compile Include="Helper\CurrencyExchange.cs" />
+    <Compile Include="Helper\EmailTemplates.cs" />
+    <Compile Include="Helper\Logging.cs" />
+    <Compile Include="Helper\Metrics.cs" />
+    <Compile Include="Helper\Timezones.cs" />
+    <Compile Include="Helper\Util.cs" />
+    <Compile Include="Model\Account.cs" />
+    <Compile Include="Model\Contact.cs" />
+    <Compile Include="Model\Currency.cs" />
+    <Compile Include="Model\DateRange.cs" />
+    <Compile Include="Model\EmailTemplate.cs" />
+    <Compile Include="Model\Opportunity.cs" />
+    <Compile Include="Model\Parameter.cs" />
+    <Compile Include="Model\SalesRep.cs" />
+    <Compile Include="Model\SalesRepMetrics.cs" />
+    <Compile Include="Model\SentReminder.cs" />
+    <Compile Include="Model\Session.cs" />
+    <Compile Include="Model\Subscriber.cs" />
+    <Compile Include="Model\TimeZone.cs" />
+    <Compile Include="Model\User.cs" />
+    <Compile Include="Model\UserActivity.cs" />
+    <Compile Include="Model\UserTimeZone.cs" />
+    <Compile Include="Model\WeeklyEmailInclude.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -94,6 +122,7 @@
     <None Include="DbShared.dbml.layout">
       <DependentUpon>DbShared.dbml</DependentUpon>
     </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -102,5 +131,6 @@
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
