--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net472" />
+  <package id="SendGrid" version="9.22.0" targetFramework="net472" />
+  <package id="starkbank-ecdsa" version="1.2.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.ProtectedData" version="5.0.0" targetFramework="net472" />
 </packages>
