--- a/ffcrm.UserEmailService.csproj
+++ b/ffcrm.UserEmailService.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Helper\Logging.cs" />
     <Compile Include="Helper\SendGridHelper.cs" />
     <Compile Include="Models\Email.cs" />
+    <Compile Include="Models\GridItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
