--- a/ffcrm.UserEmailService.csproj
+++ b/ffcrm.UserEmailService.csproj
@@ -117,5 +117,11 @@
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <Content Include="Templates\WeeklyCRM\email.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Templates\WeeklyCRM\mjml.html" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
